# age-estimation-from-face

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.dvc/: config
age_estimation/: datamodule.py  dataset.py  download.py  train.py  utils.py
age_estimation/data/: .gitignore  face_dataset.dvc
