[project]
name = "age-estimation-from-face"
version = "0.1.0"
description = "Age estimation from face images"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "pytorch-lightning>=2.2",
    "hydra-core>=1.3",
    "fire>=0.6",
    "mlflow>=2.10",
    "dvc>=3.40",
    "dvc-s3>=3.2",
    "numpy>=1.26",
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6",
    "ruff>=0.14",
]

[tool.ruff]
target-version = "py311"
line-length = 88

select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # warnings
    "I",  # isort
    "UP", # pyupgrade
]

ignore = [
    "E501", # line too long (formatter handles)
]

exclude = [
    ".venv",
    "__pycache__",
    ".ruff_cache",
]
