[project]
name = "age-estimation-from-face"
version = "0.1.0"
description = "Age estimation from face images"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "pytorch-lightning>=2.2",
    "hydra-core>=1.3",
    "fire>=0.6",
    "mlflow>=2.10",
    "dvc>=3.40",
    "dvc-s3>=3.2",
    "numpy>=1.26",
    "pillow>=10.0",
    "tqdm>=4.66",
    "dvc-gdrive>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6",
    "ruff>=0.14",
]

[tool.ruff]
# ruff.toml

line-length = 132
indent-width = 4

# Specify the file patterns to include in the analysis
include = ["*.py"]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Specify which error/warning codes should be checked
lint.select = [
    "E",  # All errors
    "W",  # All warnings
    "PIE",  # All flake8-pie
    "RET",  # All flake8-return
    "PLE",  # All Errors from Pylint
    "F401",  # unused-import
    "F541",  # f-string-missing-placeholders
    "F841",  # unused-variable
    "I001",  # isort: unsorted-imports
    "I002",  # isort: missing-required-import
    ]
lint.ignore = [  # Ruff cannot automatically fix these. Should be fixed manually before remove from below list.
    "E266",  # multiple-leading-hashes-for-block-comment. We use this for headers.
    "E402",  # module-import-not-at-top-of-file
    "E501",  # line-too-long
    "E712",  # true-false-comparison
    "E701",  # multiple-statements-on-one-line-colon
    "E711",  # none-comparison
    "E721",  # type-comparison
    "E722",  # bare-except
    "E731",  # lambda-assignment
    "E741",  # ambiguous-variable-name
    ]

# Optionally, you can disable automatic fixing for these specific rules or in general
# fix = false

# Assume Python 3.10
target-version = "py310"

[format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Configure isort settings within Ruff
[lint.isort]
force-single-line = false

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
# known-first-party = ["test_framework"]
